<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv1"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="43dp" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="70dp" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="126dp" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="182dp" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="234dp" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv4"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="258dp" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="286dp" />

        <EditText
            android:id="@+id/et5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="340dp" />

        <EditText
            android:id="@+id/et6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="390dp" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="442dp" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv6"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="474dp" />

        <EditText
            android:id="@+id/et7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="509dp" />

        <EditText
            android:id="@+id/et8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="568dp" />

        <EditText
            android:id="@+id/et9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="629dp" />

        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="679dp" />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv8"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="696dp" />

        <EditText
            android:id="@+id/et10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="735dp" />

        <EditText
            android:id="@+id/et11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="787dp" />

        <EditText
            android:id="@+id/et12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="852dp" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="907dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="calcular"
            android:text="@string/button"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="945dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="acercade"
            android:text="@string/button2"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="945dp" />

    </LinearLayout>
</ScrollView>